--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,12 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545178.md#1" target="_blank">两高管落马后 江苏汇鸿国际集团前总裁被查</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11545178.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/fandiakang-Web-Banner-1200x800-v1-150x120.jpg" align ="left"></a>退休6年后，江苏汇鸿国际集团有限公司前党委副书记、总裁范迪康被查。此前，该公司前副总裁许荣云、前董事长唐国海也已被查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 2:49 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544679.md#1" target="_blank">财新报非洲猪瘟造成1万亿直接损失 文章被删</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544679.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/f39fdbae82f3871a37b9e7bb91e528fe-150x120.jpg" align ="left"></a>“据推算国内非洲猪瘟的直接损失有1万亿”（人民币，下同），9月24日，中国工程院院士李德发在一个猪业论坛上表示，“这还不算产业链的上游和下游”。但目前这篇文章已经变404（被删除）。
+
+李德发同时也是中国农业大学动物科技学院院长、世界畜产学会副主席。
+
+猪肉是中国主要肉食来源。李德发表示，按照中国人的饮食习惯，肉供应链中60%都是靠猪肉，中国人对猪肉.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 1:50 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544847.md#1" target="_blank">川普联大发警告：社会主义幽灵威胁世界</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544847.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1040029704-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周二（9月24日）在纽约联合国大会（UNGA）发言，指出“社会主义幽灵”对世界构成严重威胁，同时他再次重申，美国永远不会成为社会主义国家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 12:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544688.md#1" target="_blank">【拍案惊奇】离奇自杀案频现 香港斧头帮治港？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544688.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/20190925-biyun-hk001-150x120.jpg" align ="left"></a>香港议员记者法轮功学员同一天遭遇袭击，密集自杀案出现；镇压反送中如“斧头帮”；川普联大演说促中共守诺；突发：佩洛西要启动弹劾川普......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 12:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544602.md#1" target="_blank">向中共泄露军事机密 美前情报官获刑10年</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544602.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1903160828552378-150x120.jpg" align ="left"></a>美国司法部表示，一名前美国国防情报局官员承认他因经济利益出卖国家，周二（9月24日）被判刑10年。他因向中共泄露军事机密，被控帮助中共从事间谍活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 11:35 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544647.md#1" target="_blank">7名截访人贴身监控 北京女访民丢工作</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544647.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/S__13115447-150x120.jpg" align ="left"></a>长期在京的甘肃访民罗巧玲，为了扶养孩子，在一建筑工地打工。在十一期间，地方截访人员再度找上门，7个人贴身监控，让她丢了工作。无奈搬出工地宿舍后，再被控制在马路边一天一夜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 11:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544630.md#1" target="_blank">民研：林郑评分跌至24.9分 港府民望再沉底</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544630.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1909242035271538-150x120.jpg" align ="left"></a>香港民意研究所24日发表新一份民意调查结果。特首林郑月娥的最新评分为24.9分，民望净值则为负57个百分点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 10:39 AM							</td></tr>
@@ -22,12 +30,8 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544016.md#1" target="_blank">中方对进口美国大豆发放新关税豁免</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11544016.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/12/0bd17c9aff9da98bbdf47db52c67652c-150x120.jpg" align ="left"></a>彭博社报导称，中共副总理刘鹤即将率团访美进行高级别贸易会谈前夕，北京对进口美国大豆的几家中国公司发放新的关税豁免。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 12:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543663.md#1" target="_blank">中国到处买肉 抬高全球肉类价格</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543663.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1154839641-150x120.jpg" align ="left"></a>非洲猪瘟疫情爆发波及全中国养猪场，养殖猪只锐减超过三分之一，牵动中国肉类采购商在全球大举购买肉品，填补国内大规模的供应缺口。此举也推高了全球牛肉、猪肉和禽类的市场价格。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 12:45 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543738.md#1" target="_blank">中共十一草木皆兵 北京严防“三种人”</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543738.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/01/1306192104291657-150x120.jpg" align ="left"></a>十一大阅兵期间，中共各地如临大敌，首都北京更是风声鹤唳、草木皆兵。知情人士披露，京城部分地区戒严，重点防范异议人士、维权人士及访民“三种人”；十一期间，所有农贸批发市场被关闭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 11:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543938.md#1" target="_blank">蔚来汽车半年亏近60亿 一年市值蒸发800亿</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543938.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1137494382-150x120.jpg" align ="left"></a>有“中国特斯拉”之称的中国电动车制造商蔚来汽车，今年第二季度财报显示，归属于股东净亏损32.85亿元（人民币，下同）。蔚来自2014年成立以来，累计亏损达400亿元，且上市一年市值已蒸发800亿。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 11:50 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543208.md#1" target="_blank">8月份 至少53名法轮功学员被非法判刑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543208.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/2019-9-24-mh-persecution-panxing-aug2019-2-150x120.png" align ="left"></a>8月份，至少有53名法轮功学员被中共非法判刑，40人被非法庭审，其中8名65岁以上的老年法轮功学员被冤判。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 11:39 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543846.md#1" target="_blank">美方代表团抵京 促中共加强芬太尼邮政筛查</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543846.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/EFN7jBHWkAAV11k-150x120.jpeg" align ="left"></a>美方毒品管制官员周二抵达北京，参观中方对芬太尼等非法物品的邮政筛查和海关设施。外界指，美方面对面施压，要求中方兑现承诺——严加检测、防止芬太尼通过邮政输美。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 11:22 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543774.md#1" target="_blank">十一前北京草木皆兵 纽时记者被逼离住处</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543774.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1509032128142039-150x120.jpg" align ="left"></a>中共建政70周年即将来临，北京首都风声鹤唳、草木皆兵。《纽约时报》驻北京记者亚维尔·海南德斯（Javier C. Hernández）发文称，他被要求搬出住处。他表示，即使在没事的时候，北京也总令人感到窒息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 11:17 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542455.md#1" target="_blank">【拍案惊奇】台湾电影《返校》为何令中共害怕</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542455.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/15c74235a78b749a_ttl7dayvxr_174e9af355e72509-150x120.jpg" align ="left"></a>台湾电影《返校》反暴政，香港躲、大陆封，电影揭示的恐怖政治，与当今反送中情境极其相似！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 11:04 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542514.md#1" target="_blank">48年台湾首进联合国 川普演说 徐俪文获邀</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542514.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/c644d5b8ebd013ca08be1556344154a4-150x120.jpg" align ="left"></a>第74届联合国大会总辩论，在纽约登场，23日，美国总统川普参与并主持了宗教自由会议，呼吁各国捍卫宗教自由。驻纽约台北经济文化办事处处长徐俪文获邀出席大会。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 10:49 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544872.md#1" target="_blank">十一期间 天安门香山交通管制 店铺停业</a><br></h3>9月25日，中共当局宣布，从10月1日至7日，天安门广场地区、香山地区，采取严格交通管制措施。在此期间，除了天安门附近酒店不准住客进出外，小商铺、农贸批发市场从今起也开始停业。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 12:40 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/25/n11544882.md#1" target="_blank">每日三退声明精选（2019/09/24）</a><br></h3>我在大学时由于成绩优异，被国内共党虚假消息洗脑，在学校和学院领导不断劝说下加入中共。后来来到美国，看到听到大量被中共隐藏和改编的事实真相，十分震惊和愤怒。于是在大约两年半前立即停交党费，与共产党邪恶组织脱离关系。由于担心共匪虚构事实，在此公开声明，我早已与中国共产党脱离关系，并且支持全世界正义联盟打倒共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 11:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543965.md#1" target="_blank">中共大使馆十一放烟花 立陶宛拒发许可</a><br></h3>立陶宛首都维尔纽斯（Vilnius）市面出现一批广告，宣传中共大使馆要在10月1日进行放烟花，邀请公众到首都市中心一条著名行人天桥附近，观看“焰火表演”，庆祝中共篡夺政权70周年。周一（9月23日）维尔纽斯政府拒绝就活动发出许可，市长西米西乌斯（Remigijus Simasius）表示，由于中共使馆没来征求市政府对外和公共事务部门的许可，来进行此次活动，因.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 12:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413_2.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
